# py_gh_action

./: LICENSE  README.md  pyproject.toml
.github/workflows/: py_gh_action.yml
app/: main.py
app/api/v1/: schemas.py
app/api/v1/endpoints/: products.py
app/core/: config.py
app/db/: database.py  models.py
tests/: test_products.py
